metadata-retriever/metadata/objects/MBAuP_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <label>Business Unit</label>
        <picklist>
            <picklistValues>
                <fullName>Alliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Allmakes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fleet</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freightliner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fuso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bus &amp; Coach</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MB Trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBFS Cars</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MBFS Trucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SelecTrucks</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>smart</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Special Vehicles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unimog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Western Star</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dealer Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>MBAuP Contacts</relationshipLabel>
        <relationshipName>MBAuP_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EOC_Recipient_Type__c</fullName>
        <label>EOC Recipient Type</label>
        <picklist>
            <picklistValues>
                <fullName>150 Days Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>150 Days CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Days Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>60 Days CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 Days Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>45 Days CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 Days Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20 Days CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 Days Primary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15 Days CC</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Email_Address__c</fullName>
        <label>Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Finance_Lead_Type__c</fullName>
        <label>Finance Lead Type</label>
        <picklist>
            <picklistValues>
                <fullName>Key 2 Key</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Payout</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Escalation_Recipient_Type__c</fullName>
        <label>Lead Escalation Recipient Type</label>
        <picklist>
            <picklistValues>
                <fullName>Immediate Notice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24H Untouched Notice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>72H Untouched Notice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CC Lead Escalation Recipient</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Mobile__c</fullName>
        <description>US_AU-DD-036 created</description>
        <label>Mobile</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sub_Business_Unit__c</fullName>
        <label>Offered Services (Sub-Business Unit)</label>
        <picklist>
            <picklistValues>
                <fullName>Auto Body Repairer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance &amp; Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pre-Owned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Surname__c</fullName>
        <label>Surname</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <picklist>
            <picklistValues>
                <fullName>BDM Army Trucks - Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDM Cars - After-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDM Cars - Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDM Freightliner - Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDM Fuso - Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDM MB Bus - Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDM MB Trucks/Freightliner - Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDM Trucks - After-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDM Vans - After-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BDM Vans - Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DRM MBFS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSM Trucks - After-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FSM Vans - After-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TSM Cars - After-Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>MBAuP Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>MBAuP Contact Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MBAuP Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Moblie_should_be_numeric</fullName>
        <active>true</active>
        <errorConditionFormula>!ISNUMBER( Mobile__c )
&amp;&amp; !ISBLANK(Mobile__c )</errorConditionFormula>
        <errorDisplayField>Mobile__c</errorDisplayField>
        <errorMessage>Mobile should be a numric value</errorMessage>
    </validationRules>
</CustomObject>